--- a/cluster.yml
+++ b/cluster.yml
@@ -3,7 +3,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: capstone-project
+  name: myEKSCluster
   region: us-east-1
 
 managedNodeGroups:
